# tsuntsun

./: .gitignore  LICENSE  README.md  shell.nix  stack.yaml  tsuntsun.cabal
res/: mainwindow.glade
src/: Main.hs
src/NaturalLanguageProcessing/TsunTsun/: TH.hs
