name:                tsuntsun
version:             0.1.0.0
synopsis:            Interacts with tesseract to ease reading of RAW Japanese manga.
description:         Interacts with tesseract to ease reading of RAW Japanese manga.
homepage:            https://github.com/Fuuzetsu/tsuntsun
license:             GPL-3
license-file:        LICENSE
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.co.uk
-- copyright:
category:            Natural Language Processing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable tsuntsun
  main-is:             Main.hs
  other-modules:       NaturalLanguageProcessing.TsunTsun.TH
  -- other-extensions:
  build-depends:       base >=4.5 && <5, system-filepath, temporary, gtk3, fsnotify,
                       system-filepath, temporary, glib, process, directory, text, containers,
                       template-haskell, transformers
  hs-source-dirs:      src
  default-language:    Haskell2010