name:                tsuntsun
version:             0.1.0.0
synopsis:            Interacts with tesseract to ease reading of RAW Japanese manga.
description:         Interacts with tesseract to ease reading of RAW Japanese manga.
homepage:            https://github.com/Fuuzetsu/tsuntsun
license:             GPL-3
license-file:        LICENSE
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.co.uk
copyright:           2014-2017 Mateusz Kowalczyk
category:            Natural Language Processing
build-type:          Simple
extra-source-files:  README.md
                   , res/mainwindow.glade
cabal-version:       >=1.10

executable tsuntsun
  main-is:             Main.hs
  other-modules:       NaturalLanguageProcessing.TsunTsun.TH
  build-depends:       base
                     , containers
                     , directory
                     , fsnotify
                     , glib
                     , gtk3
                     , process
                     , stm
                     , system-filepath
                     , system-filepath
                     , template-haskell
                     , temporary
                     , temporary
                     , text
                     , transformers
                     , typed-process
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -O2 -Wall -Werror